# flask-api-book-store

./: .gitignore  Dockerfile  README.md  app.py  docker-entrypoint.sh  docker-poetry.md  http-client.env.json  http-client.rest  pyproject.toml  requirements.txt  schemas.py
instance/: data.db
migrations/versions/: 2024_03_03_1445-0911387f5429_.py  2024_03_03_1448-2d6ec93e1264_add_year_to_book_table.py  2024_03_03_1647-3ca177754820_add_user_table.py  2024_03_03_1657-7a9d52318fb4_add_review_table.py  2024_03_03_1736-b711d08eb5f5_add_rating_and_review_column.py  2024_03_03_1858-c8b921dec68d_change_column_name.py  2024_03_03_2104-ea6d7986ef46_add_password_column.py  2024_03_03_2200-178f49f844e3_add_role_column.py  2024_03_05_2208-152b69bd5207_add_publisher_column_to_book_table.py  2024_03_05_2212-1ae0014b536e_change_penerbit_to_publisher.py  2024_03_05_2235-1f9d317b4a0c_delete_publisher_column.py
models/: __init__.py  book.py  common.py  review.py  user.py
resources/: auth.py  book.py  review.py  user.py
tests/: conftest.py  test_app.py
